@@ -9,6 +9,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Added
 
+* check_motd_carp_cron: make sure the motd-carp-state.sh script is present and executed by cron if we're a carp member
+
 ### Changed
 
 ### Fixed
